moved devices script to javascript folder

--- a/pages/devices.html
+++ b/pages/devices.html
@@ -52,7 +52,7 @@
     <div class="home"></div>
     <div class="bottom-bar"></div>
   </div>
-  <script type="text/javascript" src="../script.js"></script>
+  <script type="text/javascript" src="../js/script.js"></script>
 </body>
 
 </html>
