--- a/pages/map.html
+++ b/pages/map.html
@@ -7,6 +7,8 @@
   <script src="https://maps.googleapis.com/maps/api/js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../js/jquery.session.js"></script>
+  <script src="../js/children.js"></script>
+  <script src="../js/map.js"></script>
   <script>
     function initialize() {
       console.info('initializing google maps');
@@ -29,26 +31,7 @@
         title: 'You are here.'
       });
 
-      var child1 = new google.maps.Marker({
-        position: {lat: 40.248660, lng: -111.648803},
-        map: map,
-        label: 'Sally',
-        title: 'Sally.',
-      });
-
-      var child2 = new google.maps.Marker({
-        position: {lat: 40.251525, lng: -111.647775},
-        map: map,
-        label: 'Billy',
-        title: 'Billy.'
-      });
-
-      var child3 = new google.maps.Marker({
-        position: {lat: 40.248215, lng: -111.620414},
-        map: map,
-        label: 'Fred',
-        title: 'Fred.'
-      });
+      add_child_markers(getRegisteredChildren(), map);
     }
     google.maps.event.addDomListener(window, 'load', initialize);
   </script>
