--- a/pages/map.html
+++ b/pages/map.html
@@ -12,6 +12,7 @@
   <script>
 
     var map;
+    var satelliteMode;
 
     function initialize() {
       console.info('initializing google maps');
@@ -26,6 +27,7 @@
         mapTypeId: google.maps.MapTypeId.ROADMAP
       }
       map = new google.maps.Map(mapCanvas, mapOptions);
+      satelliteMode = false;
 
       var marker = new google.maps.Marker({
         position: {lat: 40.248679, lng: -111.648513},
@@ -37,8 +39,18 @@
       add_child_markers(getRegisteredChildren(), map);
     }
 
-    function setSatelliteMode() {
-       map.setMapTypeId(google.maps.MapTypeId.SATELLITE);
+    function toggleSatelliteMode() {
+      if (satelliteMode) {
+        map.setMapTypeId(google.maps.MapTypeId.ROADMAP);
+        $("#sat-map").html('Satellite <img src="../images/satellite_01.png" width="80%" height="80%">');
+        satelliteMode = false;
+      }
+      else {
+        map.setMapTypeId(google.maps.MapTypeId.SATELLITE);
+        $("#sat-map").html('Map View <img src="../images/map_icon_01.png" width="80%" height="80%">');
+        satelliteMode = true;
+      }
+
     }
 
     google.maps.event.addDomListener(window, 'load', initialize);
@@ -67,9 +79,9 @@
       <div class="page">
         <div id="map" class="map"></div>
         <div class="map-links">
-          <div id="sat-map" class="map-links-idv" onclick="setSatelliteMode()">
+          <div id="sat-map" class="map-links-idv" onclick="toggleSatelliteMode()">
             Satellite
-            <img src="../images/satellite_01.png" width="80%" height="80%">
+            <img id="sat-icon" src="../images/satellite_01.png" width="80%" height="80%">
           </div>
           <div class="map-links-idv" onclick="window.location='short_range.html';">
             Short Range
