--- a/pages/map.html
+++ b/pages/map.html
@@ -29,11 +29,24 @@
       map = new google.maps.Map(mapCanvas, mapOptions);
       satelliteMode = false;
 
+      var iconWidth = 256;
+      var iconHeight = 256;
+      var scale = .2;
+
+      var youIcon = new google.maps.MarkerImage(
+            '../images/youIcon.png', //url
+            new google.maps.Size(iconWidth, iconHeight), //size
+            new google.maps.Point(0,0), //origin
+            new google.maps.Point(0,0), //anchor
+            new google.maps.Size(iconWidth*scale,iconHeight*scale)
+    );
+
       var marker = new google.maps.Marker({
         position: {lat: 40.248679, lng: -111.648513},
         map: map,
         label: 'You',
-        title: 'You are here.'
+        title: 'You are here.',
+        icon: youIcon
       });
 
       add_child_markers(getRegisteredChildren(), map);
