changed wording of notification settings

--- a/pages/notification_settings.html
+++ b/pages/notification_settings.html
@@ -39,7 +39,7 @@
               </div>
           </div>
           <div class="options-bar">
-              Child Not In Approved Location
+              Child Not In Assumed Location
               <div class="onoffswitch options-bar-option">
                   <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox"  id="neutral" checked>
                   <label class="onoffswitch-label" for="neutral">
