added script reference

--- a/pages/devices.html
+++ b/pages/devices.html
@@ -5,6 +5,8 @@
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="../js/jquery.session.js"></script>
+  <script src="../js/children.js"></script>
   <title>Find Your Child App</title>
 </head>
 <body>
