--- a/pages/map.html
+++ b/pages/map.html
@@ -29,24 +29,7 @@
       map = new google.maps.Map(mapCanvas, mapOptions);
       satelliteMode = false;
 
-      var iconWidth = 256;
-      var iconHeight = 256;
-      var scale = .2;
-
-      var youIcon = new google.maps.MarkerImage(
-            '../images/youIcon.png', //url
-            new google.maps.Size(iconWidth*scale, iconHeight*scale), //size
-            new google.maps.Point(0,0), //origin
-            new google.maps.Point((iconWidth/2)*scale, iconHeight*scale), //anchor
-            new google.maps.Size(iconWidth*scale,iconHeight*scale)
-    );
-
-      var marker = new google.maps.Marker({
-        position: {lat: 40.248679, lng: -111.648513},
-        map: map,
-        title: 'You are here.',
-        icon: youIcon
-      });
+      add_your_location_marker(getYourLocation(), map);
 
       add_child_markers(getRegisteredChildren(), map);
     }
