gets map center location (your location) from session state

--- a/pages/map.html
+++ b/pages/map.html
@@ -19,7 +19,7 @@
 
       var mapCanvas = document.getElementById('map');
       var mapOptions = {
-        center: new google.maps.LatLng(40.248679, -111.648513),
+        center: getYourLocation(),
         zoom: 16,
         maxZoom: 18,
         mapTypeControl: false,
