--- a/pages/map.html
+++ b/pages/map.html
@@ -19,7 +19,7 @@
 
       var mapCanvas = document.getElementById('map');
       var mapOptions = {
-        center: getYourLocation(),
+        center: getOrigin(),
         zoom: 16,
         maxZoom: 18,
         mapTypeControl: false,
