clears map session variables after use so they don't persist to other pages

--- a/pages/map.html
+++ b/pages/map.html
@@ -32,6 +32,7 @@
       add_your_location_marker(getYourLocation(), map);
 
       add_child_markers(getRegisteredChildren(), map);
+      clearMapCache();
     }
 
     function toggleSatelliteMode() {
