--- a/pages/medical_center_direction.html
+++ b/pages/medical_center_direction.html
@@ -29,7 +29,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d1522.65335477202!2d-111.64856377361845!3d40.24671452322565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e6!4m5!1s0x874d90ba3dc90099%3A0xccd44eb10aa3ab3c!2zSGFyb2xkIEIuIExlZSBMaWJyYXJ5LCDtlITroZzrs7Qg7Jyg7YOA!3m2!1d40.2487764!2d-111.64920869999999!4m5!1s0x874d90a75e97cef7%3A0x9ce499e123a4ff10!2sUtah+Valley+Regional+Medical+Center%2C+1034+N+500+W%2C+Provo%2C+UT+84604+%EB%AF%B8%EA%B5%AD!3m2!1d40.2482723!2d-111.66658679999999!5e0!3m2!1sko!2sus!4v1448960736873" width="350" height="550" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';"></div>
     <div class="bottom-bar"></div>
   </div>
 </body>
