--- a/pages/settings.html
+++ b/pages/settings.html
@@ -33,10 +33,10 @@
         <div class="emergency hospitals" onclick="window.location='preferences.html';">
           Preferences
         </div>
-        </div>
       </div>
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';" ></div>
     <div class="bottom-bar"></div>
+  </div>
 </body>
 </html>
