--- a/pages/template.html
+++ b/pages/template.html
@@ -29,7 +29,7 @@
         <!-- Content goes here -->
       </div>
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';"></div>
     <div class="bottom-bar"></div>
   </div>
 </body>
