--- a/pages/battery_saver.html
+++ b/pages/battery_saver.html
@@ -40,7 +40,7 @@
           </div>
       </div>
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';"></div>
     <div class="bottom-bar"></div>
   </div>
 </body>
