--- a/pages/devices.html
+++ b/pages/devices.html
@@ -51,7 +51,7 @@
 
       </div>
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';"></div>
     <div class="bottom-bar"></div>
   </div>
   <script type="text/javascript" src="../js/devices.js"></script>
