--- a/pages/home.html
+++ b/pages/home.html
@@ -34,7 +34,7 @@
         <img src="../images/settings_02.png" width="100%" height="60%"/>
       </div>
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';"></div>
     <div class="bottom-bar"></div>
   </div>
 </body>
