--- a/pages/pediatrics.html
+++ b/pages/pediatrics.html
@@ -34,7 +34,7 @@
         </div>
       </div>      
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';"></div>
     <div class="bottom-bar"></div>
   </div>
 </body>
