--- a/pages/phone_call_medical_center.html
+++ b/pages/phone_call_medical_center.html
@@ -17,7 +17,7 @@
     <div class="screen">
         <img src="../images/phone_call_medical_center.png" width="100%" height="100%"> 
     </div>
-    <div class="home"></div>
+    <div class="home" onclick="window.location='home_init.html';"></div>
     <div class="bottom-bar"></div>
   </div>
 </body>
