--- a/pages/home.html
+++ b/pages/home.html
@@ -17,21 +17,26 @@
     <div class="speaker"></div>
     <div class="screen">
       <!-- Content goes here -->
+      <div class="hm hm_children" onclick="window.location='children.html';">
+        <label class="hm_lbl">Find Your Child</label>
+        <img src="../images/child_02.png" width="100%" height="60%"/>
+      </div>
       <div class="hm hm_map" onclick="window.location='map.html';">
-        <label class="hm_lbl">Find My Child</label>
+        <label class="hm_lbl">Map</label>
         <img src="../images/map_icon_02.png" width="100%" height="60%"/>
       </div>
       <div class="hm hm_locations" onclick="window.location='locations.html';">
         <label class="hm_lbl">Manage Locations</label>
         <img src="../images/manage_locations_02.png" width="100%" height="60%"/>
       </div>
-      <div class="hm hm_emergency" onclick="window.location='emergency.html';">
-        <label class="hm_lbl">Emergency</label>
-        <img src="../images/emergency_02.png" width="100%" height="60%"/>
-      </div>
       <div class="hm hm_settings" onclick="window.location='settings.html';">
         <label class="hm_lbl">Settings</label>
         <img src="../images/settings_02.png" width="100%" height="60%"/>
+      </div>
+      <div class="hm_emergency" onclick="window.location='emergency.html';">
+        <label class="hm_lbl">Emergency</label>
+        <br/>
+        <img src="../images/emergency_02.png" width="30%" height="60%"/>
       </div>
     </div>
     <div class="home" onclick="window.location='home_init.html';"></div>
