added icons for option on preferences' page

--- a/pages/preferences.html
+++ b/pages/preferences.html
@@ -29,9 +29,11 @@
         <!-- Content goes here -->
           <div class="emergency hospitals" onclick="window.location='notification_settings.html';">
               Notification Settings
+            <div class="icon-right"><img src="../images/notification_02.png" width="90%" height="100%"/></div>
           </div>
           <div class="emergency hospitals" onclick="window.location='battery_saver.html';">
               Battery Saver
+              <div class="icon-right"><img src="../images/battery_04.png" width="90%" height="100%"/></div>
           </div>
       </div>
     </div>
