adding preferences and devices icons. I don't really like them much, so we should probably change them later.

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -29,9 +29,11 @@
         <!-- Content goes here -->
         <div class="emergency hospitals" onclick="window.location='devices.html';">
           Device Management
+          <div class="icon-right"><img src="../images/devices_03.png" width="90%" height="100%"/></div>
         </div>
         <div class="emergency hospitals" onclick="window.location='preferences.html';">
           Preferences
+          <div class="icon-right"><img src="../images/preferences_02.png" width="90%" height="80%"/></div>
         </div>
       </div>
     </div>
