--- a/pages/children.html
+++ b/pages/children.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="../js/jquery.session.js"></script>
+  <script src="../js/children.js"></script>
+  <script src="../js/find-your-child-list.js"></script>
   <title>Find Your Child App</title>
 </head>
 <body>
@@ -15,7 +19,6 @@
     <div class="sensor"></div>
     <div class="speaker"></div>
     <div class="screen">
-      <!-- Content goes here -->
       <div class="page-banner">
         <div class="button left" onclick="window.location='home.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
@@ -25,8 +28,9 @@
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
       </div>
-      <div class="page">
+      <div id="page" class="page">
         <!-- Content goes here -->
+        <script>populatePage()</script>
       </div>
     </div>
     <div class="home" onclick="window.location='home_init.html';"></div>
