--- a/pages/children.html
+++ b/pages/children.html
@@ -7,6 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="../js/jquery.session.js"></script>
   <script src="../js/children.js"></script>
+  <script src="../js/map.js"></script>
   <script src="../js/find-your-child-list.js"></script>
   <title>Find Your Child App</title>
 </head>
