--- a/pages/map.html
+++ b/pages/map.html
@@ -20,8 +20,8 @@
       var mapCanvas = document.getElementById('map');
       var mapOptions = {
         center: getOrigin(),
-        zoom: 16,
-        maxZoom: 18,
+        zoom: getZoom(),
+        maxZoom: 19,
         mapTypeControl: false,
         streetViewControl: false,
         mapTypeId: google.maps.MapTypeId.ROADMAP
