renaming children.html to find-your-child.html

--- a/pages/home_init.html
+++ b/pages/home_init.html
@@ -72,7 +72,7 @@
     <div class="speaker"></div>
     <div class="screen">
       <!-- Content goes here -->
-      <div class="hm hm_children" onclick="window.location='children.html';">
+      <div class="hm hm_children" onclick="window.location='find-your-child.html';">
         <label class="hm_lbl">Find Your Child</label>
         <img src="../images/child_02.png" width="100%" height="60%"/>
       </div>
