--- a/pages/devices.html
+++ b/pages/devices.html
@@ -7,6 +7,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="../js/jquery.session.js"></script>
   <script src="../js/children.js"></script>
+  <script src="../js/map.js"></script>
+  <script src="../js/device-list.js"></script>
   <title>Find Your Child App</title>
 </head>
 <body>
@@ -28,23 +30,9 @@
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
       </div>
-      <div class="page">
+      <div id="page" class="page">
        <!-- Content goes here -->
-       <!-- <div class="location-header">Locations:</div>-->
-       <!-- <div class="table-header">
-          <div class="table-header-row">Name</div>
-          <div class="table-header-row">Map</div>
-          <div class="table-header-row">Edit</div>
-          <div class="table-header-row">Approved?</div>
-        </div>-->
-        <div class="location alt">
-          <div class="loc_name">Tom</div>
-          <div class=""><img class="removed" src="../images/x_icon_02.png" width="15%" height="15%"/></div>
-        </div>
-        <div class="location alt">
-          <div class="loc_name">Billy</div>
-          <div class="d"><img class="removed" src="../images/x_icon_02.png" width="15%" height="15%"/></div>
-        </div>
+        <script>populatePage()</script>
         <div class="add-d">
           <div class="add-device">Add Device</div>
         </div>
