--- a/pages/devices.html
+++ b/pages/devices.html
@@ -33,8 +33,8 @@
       <div id="page" class="page">
        <!-- Content goes here -->
         <script>populatePage()</script>
-        <div class="add-d">
-          <div class="add-device">Add Device</div>
+        <div class="add-d" id="add-device-button">
+          <div class="add-device" onclick="openAddChildDialog()">Add Device</div>
         </div>
 
       </div>
