--- a/pages/home_init.html
+++ b/pages/home_init.html
@@ -15,37 +15,43 @@
     var child1 = {
       name: 'Sally',
       device_id: 1,
-      location: {lat: 40.248660, lng: -111.648803}
+      location: {lat: 40.248660, lng: -111.648803},
+      medical:{'nut','dairy'}
     }
 
     var child2 = {
       name: 'Billy',
       device_id: 2,
-      location: {lat: 40.251525, lng: -111.647775}
+      location: {lat: 40.251525, lng: -111.647775},
+      medical:{'egg','peach'}
     }
 
     var child3 = {
       name: 'Fred',
       device_id: 3,
-      location: {lat: 40.248215, lng: -111.620414}
+      location: {lat: 40.248215, lng: -111.620414},
+      medical:{'nut'}
     }
 
     var child4 = {
       name: 'Tom',
       device_id: 4,
-      location: {lat: 40.223545, lng: -111.644433}
+      location: {lat: 40.223545, lng: -111.644433},
+      mdeical:{'dairy'}
     }
 
     var child5 = {
       name: 'George',
       device_id: 5,
-      location: {lat: 40.256313, lng: -111.643755}
+      location: {lat: 40.256313, lng: -111.643755},
+      medical:{'gluten'}
     }
 
     var child6 = {
       name: 'Beth',
       device_id: 6,
-      location: {lat: 40.258235, lng: -111.642044}
+      location: {lat: 40.258235, lng: -111.642044},
+      medical:{'egg'}
     }
 
     $.session.clear();
