--- a/pages/medical_information.html
+++ b/pages/medical_information.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
-  <title>Find Your Child App</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="../js/jquery.session.js"></script>
+  <script src="../js/children.js"></script>
+  <script src="../js/medical_info.js"></script>
+  <title>Medical Information</title>
 </head>
 <body>
   <div class="marvel-device iphone6 silver phone">
@@ -15,27 +19,18 @@
     <div class="sensor"></div>
     <div class="speaker"></div>
     <div class="screen">
-      <!-- Content goes here -->
       <div class="page-banner">
         <div class="button left" onclick="window.location='home.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
-        <div class="section-title">Emergency</div>
+        <div class="section-title">Find Your Child</div>
         <div class="button right" onclick="window.location='home.html';">
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
       </div>
-      <div class="page">
-        <div class="emergency hospitals" onclick="window.location='nearby_hospital.html';">
-          Nearby Hospitals/Urgent Care
-        </div>
-        <div class="emergency hospitals" onclick="window.location='medical_information.html';">
-          Children's Medical Information
-        </div>
-        <div class="emergency nineoneone" onclick="window.location='phone_call_emergency.html';">
-          Dial 9-1-1
-        </div>
+      <div id="page" class="page">
         <!-- Content goes here -->
+        <script>populatePage()</script>
       </div>
     </div>
     <div class="home" onclick="window.location='home_init.html';"></div>
