add medical information

--- a/pages/medical_information.html
+++ b/pages/medical_information.html
@@ -8,6 +8,7 @@
   <script src="../js/jquery.session.js"></script>
   <script src="../js/children.js"></script>
   <script src="../js/medical_info.js"></script>
+  
   <title>Medical Information</title>
 </head>
 <body>
@@ -20,10 +21,10 @@
     <div class="speaker"></div>
     <div class="screen">
       <div class="page-banner">
-        <div class="button left" onclick="window.location='home.html';">
+        <div class="button left" onclick="window.location='nearby_hospital.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
-        <div class="section-title">Find Your Child</div>
+        <div class="section-title">Medical Info</div>
         <div class="button right" onclick="window.location='home.html';">
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
