--- a/pages/medical_center.html
+++ b/pages/medical_center.html
@@ -17,7 +17,7 @@
     <div class="screen">
       <!-- Content goes here -->
       <div class="page-banner">
-        <div class="button left" onclick="window.location='emergency.html';">
+        <div class="button left" onclick="window.location='nearby_hospital.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <div class="section-title">Emergency</div>
