fixed medical info bug (if child did not have any).

--- a/pages/home_init.html
+++ b/pages/home_init.html
@@ -37,18 +37,21 @@
     var child4 = {
       name: 'Tom',
       device_id: 4,
+      medical:['None'],
       location: {lat: 40.223545, lng: -111.644433}
     }
 
     var child5 = {
       name: 'George',
       device_id: 5,
+      medical:['None'],
       location: {lat: 40.256313, lng: -111.643755}
     }
 
     var child6 = {
       name: 'Beth',
       device_id: 6,
+      medical:['snakes'],
       location: {lat: 40.258235, lng: -111.642044}
     }
 
