created display-location.html page.

--- a/pages/locations.html
+++ b/pages/locations.html
@@ -7,6 +7,7 @@
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../js/jquery.session.js"></script>
   <script src="../js/children.js"></script>
+  <script src="../js/locations.js"></script>
   <script src="../js/map.js"></script>
   <title>Find Your Child App</title>
 </head>
@@ -40,7 +41,7 @@
         </div>
         <div class="location">
           <div class="loc_name">Home</div>
-          <div  class="loc_map" onclick="window.location='location.home.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
+          <div  class="loc_map" onclick="goToLocation(1)">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
           <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
           <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
         </div>
