changed add location to be just title

--- a/pages/add_location.html
+++ b/pages/add_location.html
@@ -85,12 +85,14 @@
           console.log(point.lat(), point.lng());
         });
         console.log('coordinates', coordinatesArray);
-        
+        openAddLocationDialog();
+
         drawingManager.setMap(null);
       });
 
       drawingManager.addListener('rectanglecomplete', function(rectangle) {
         console.log('rectangle', rectangle);
+        openAddLocationDialog();
 
         drawingManager.setMap(null);
       });
