--- a/pages/home.html
+++ b/pages/home.html
@@ -5,6 +5,9 @@
   <link rel="stylesheet" href="../css/devices.min.css" type="text/css">
   <link rel="stylesheet" href="../css/style.css" type="text/css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="../js/jquery.session.js"></script>
+  <script src="../js/map.js"></script>
+
   <title>Find Your Child App</title>
 </head>
 <body>
@@ -21,11 +24,11 @@
         <label class="hm_lbl">Find Your Child</label>
         <img src="../images/child_02.png" width="100%" height="60%"/>
       </div>
-      <div class="hm hm_map" onclick="window.location='map.html';">
+      <div class="hm hm_map" onclick="goStraightToMap()">
         <label class="hm_lbl">Map</label>
         <img src="../images/map_icon_02.png" width="100%" height="60%"/>
       </div>
-      <div class="hm hm_locations" onclick="window.location='locations.html';">
+      <div class="hm hm_locations" onclick="window.location='individual-locations.html';">
         <label class="hm_lbl">Manage Locations</label>
         <img src="../images/manage_locations_02.png" width="100%" height="60%"/>
       </div>
