--- a/pages/map.html
+++ b/pages/map.html
@@ -64,7 +64,7 @@
     <div class="screen">
       <!-- Content goes here -->
       <div class="page-banner">
-        <div class="button left" onclick="window.location='home.html';">
+        <div class="button left" onclick="goBack();">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <div class="section-title">Map View</div>
