populates locations dynamically (only available from home.init)

--- a/pages/home_init.html
+++ b/pages/home_init.html
@@ -177,7 +177,7 @@
         <label class="hm_lbl">Map</label>
         <img src="../images/map_icon_02.png" width="100%" height="60%"/>
       </div>
-      <div class="hm hm_locations" onclick="window.location='individual-locations.html';">
+      <div class="hm hm_locations" onclick="window.location='manage-locations.html';">
         <label class="hm_lbl">Manage Locations</label>
         <img src="../images/manage_locations_02.png" width="100%" height="60%"/>
       </div>
