--- a/pages/manage-locations.html
+++ b/pages/manage-locations.html
@@ -30,7 +30,7 @@
           <img src="../images/home_02.png" width="70%" height="80%" class="banner-icon"/>
         </div>
       </div>
-      <div class="page">
+      <div id="page" class="page">
         <!-- Content goes here -->
        <!-- <div class="location-header">Locations:</div>-->
         <div class="table-header">
@@ -39,42 +39,10 @@
           <div class="table-header-row">Edit</div>
           <div class="table-header-row">Approved?</div>
         </div>
-        <div class="location">
-          <div class="loc_name">Home</div>
-          <div  class="loc_map" onclick="goToLocation(1)">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
-          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
-        </div>
-        <div class="location alt">
-          <div class="loc_name">School</div>
-          <div  class="loc_map" onclick="goToLocation(2)">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
-          <div  class="loc_edit" onclick="goToMap(3)">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved">7:00am - 3:00pm</div>
-        </div>
-        <div class="location">
-          <div class="loc_name">High<br/>  School</div>
-          <div  class="loc_map" onclick="window.location='location.highschool.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
-          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved">8:00am - 4:00pm</div>
-        </div>
-        <div class="location alt">
-          <div class="loc_name">Park</div>
-          <div  class="loc_map" onclick="window.location='location.park.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
-          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved"><img class="loc-center" src="../images/check_01.png" width="40%" height="40%"/></div>
-        </div>
-        <div class="location">
-          <div class="loc_name">Cemetery</div>
-          <div  class="loc_map" onclick="window.location='location.cemetery.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
-          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved"><img class="loc-center" src="../images/x_icon_02.png" width="40%" height="40%"/></div>
-        </div>
-        <div class="location alt">
-          <div class="loc_name">Piano<br/>  Lessons</div>
-          <div  class="loc_map" onclick="window.location='location.piano_lessons.html';">View<img src="../images/map_icon_02.png" width="90%" height="90%"/></div>
-          <div  class="loc_edit" onclick="window.location='location.home.html';">Edit<img src="../images/edit_02.png" width="90%" height="90%"/></div>
-          <div class="loc_approved">12:00pm - 1:30pm</div>
-        </div>
+        <script>
+          var locations = getLocations();
+          populateLocations(locations);
+        </script>
       </div>
     </div>
     <div class="home" onclick="window.location='home_init.html';"></div>
