set add location default style to polygon rather than marker

--- a/pages/manage-locations.html
+++ b/pages/manage-locations.html
@@ -43,6 +43,9 @@
           var locations = getLocations();
           populateLocations(locations);
         </script>
+        <div class="add-d" id="add-device-button">
+          <div class="add-device" onclick="openAddLocationPage()">Add Location</div>
+        </div>
       </div>
     </div>
     <div class="home" onclick="window.location='home_init.html';"></div>
