--- a/pages/add_location.html
+++ b/pages/add_location.html
@@ -52,7 +52,7 @@
       map.setOptions({styles: styleArray});
 
       var drawingManager = new google.maps.drawing.DrawingManager({
-        drawingMode: google.maps.drawing.OverlayType.MARKER,
+        drawingMode: google.maps.drawing.OverlayType.POLYGON,
         drawingControl: true,
         drawingControlOptions: {
           position: google.maps.ControlPosition.TOP_CENTER,
