saving approval to location attribute in session

--- a/pages/home_init.html
+++ b/pages/home_init.html
@@ -68,7 +68,8 @@
         {lat: 40.258256612497064, lng: -111.64193585515022},
         {lat: 40.25814607984728, lng: -111.64199218153954},
         {lat: 40.25823614350147, lng: -111.64226040244102}
-      ]
+      ],
+      approval: 'always'
     }
 
     var loc6 = {
@@ -82,7 +83,8 @@
         {lat: 40.22580240975573, lng: -111.6437315940857},
         {lat: 40.22229634720147, lng: -111.64098501205444},
         {lat: 40.22232911498124, lng: -111.6468858718872}
-      ]
+      ],
+      approval: 'never'
     }
 
     var loc3 = {
@@ -98,7 +100,8 @@
         {lat: 40.2472771777072, lng: -111.66091918945312},
         {lat: 40.247080643210694, lng: -111.66091918945312},
         {lat: 40.247080643210694, lng: -111.66199207305908}
-      ]
+      ],
+      approval: '8:00am - 4:00pm'
     }
 
     var loc4 = {
@@ -132,7 +135,8 @@
         {lat: 40.25950418608783, lng: -111.65955662727356},
         {lat: 40.259115281283705, lng: -111.65942251682281},
         {lat: 40.25908253130341, lng: -111.65962636470795}
-      ]
+      ],
+      approval: '12:00mm - 1:30pm'
     }
 
     var loc2 = {
@@ -148,7 +152,8 @@
         {lat: 40.246151191090306, lng: -111.64200961589813},
         {lat: 40.24706835978569, lng: -111.64199888706207},
         {lat: 40.24706835978569, lng: -111.64309322834015}
-      ]
+      ],
+      approval: '7:00am - 3:00pm'
     }
 
     $.session.clear();
