dynamic version now displays approval properly

--- a/pages/home_init.html
+++ b/pages/home_init.html
@@ -121,7 +121,8 @@
         {lat: 40.255789030456945, lng: -111.64486348628998},
         {lat: 40.255887285132715, lng: -111.6448849439621},
         {lat: 40.255887285132715, lng: -111.64507806301117}
-      ]
+      ],
+      approval: 'always'
     }
 
     var loc5 = {
