--- a/pages/edit-location.html
+++ b/pages/edit-location.html
@@ -70,7 +70,7 @@
     <div class="screen">
       <!-- Content goes here -->
       <div class="page-banner">
-        <div class="button left" onclick="window.location='home.html';">
+        <div class="button left" onclick="window.location='manage-locations.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <div class="section-title">Map View</div>
