fix back button link

--- a/pages/medical_information.html
+++ b/pages/medical_information.html
@@ -8,7 +8,7 @@
   <script src="../js/jquery.session.js"></script>
   <script src="../js/children.js"></script>
   <script src="../js/medical_info.js"></script>
-  
+
   <title>Medical Information</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
     <div class="speaker"></div>
     <div class="screen">
       <div class="page-banner">
-        <div class="button left" onclick="window.location='nearby_hospital.html';">
+        <div class="button left" onclick="window.location='emergency.html';">
           <img src="../images/back_02.png" width="80%" height="80%" class="banner-icon"/>
         </div>
         <div class="section-title">Medical Info</div>
